--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="row" id="viewblock">
         <div class="imgDiv"> 
-            <img class="img-responsive" src="images/pizza.png">
+            <img class="img-responsive" src="pizza.png">
         </div>
         <div class="menuDiv">
             <button id="menuList" onclick="getMenu()">Mostrar Menu</button>
@@ -45,7 +45,7 @@
     </div>
 
     <div>
-        <img class="img-responsive" src="images/topping.png">
+        <img class="img-responsive" src="topping.png">
     </div>
 
 
